.metadata/.plugins/org.eclipse.cdt.ui/Projet.build.log
12:03:13 **** Incremental Build of configuration Debug for project Projet ****
make -j all 
Building file: ../lv_examples/lv_apps/demo/demo2.c
Invoking: MCU GCC Compiler
Building file: ../Src/main.c
C:\PerfectTuning\Projet\Debug
Invoking: MCU GCC Compiler
arm-none-eabi-gcc -mcpu=cortex-m7 -mthumb -mfloat-abi=hard -mfpu=fpv5-d16 '-D__weak=__attribute__((weak))' '-D__packed=__attribute__((__packed__))' -DUSE_HAL_DRIVER -DSTM32F769xx -I"C:/PerfectTuning/Projet/Inc" -I"C:/PerfectTuning/Projet/Drivers/STM32F7xx_HAL_Driver/Inc" -I"C:/PerfectTuning/Projet/Drivers/STM32F7xx_HAL_Driver/Inc/Legacy" -I"C:/PerfectTuning/Projet/Drivers/CMSIS/Device/ST/STM32F7xx/Include" -I"C:/PerfectTuning/Projet/Drivers/CMSIS/Include" -I"C:/PerfectTuning/Projet" -I"C:/PerfectTuning/Projet/lv_examples" -I"C:/PerfectTuning/Projet/Drivers/BSP/Components" -I"C:/PerfectTuning/Projet/Drivers/BSP/STM32F769I-Discovery" -I"C:/PerfectTuning/Projet/Utilities/Fonts" -I"C:/PerfectTuning/Projet/Drivers"  -O0 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"lv_examples/lv_apps/demo/demo2.d" -MT"lv_examples/lv_apps/demo/demo2.o" -o "lv_examples/lv_apps/demo/demo2.o" "../lv_examples/lv_apps/demo/demo2.c"
C:\PerfectTuning\Projet\Debug
arm-none-eabi-gcc -mcpu=cortex-m7 -mthumb -mfloat-abi=hard -mfpu=fpv5-d16 '-D__weak=__attribute__((weak))' '-D__packed=__attribute__((__packed__))' -DUSE_HAL_DRIVER -DSTM32F769xx -I"C:/PerfectTuning/Projet/Inc" -I"C:/PerfectTuning/Projet/Drivers/STM32F7xx_HAL_Driver/Inc" -I"C:/PerfectTuning/Projet/Drivers/STM32F7xx_HAL_Driver/Inc/Legacy" -I"C:/PerfectTuning/Projet/Drivers/CMSIS/Device/ST/STM32F7xx/Include" -I"C:/PerfectTuning/Projet/Drivers/CMSIS/Include" -I"C:/PerfectTuning/Projet" -I"C:/PerfectTuning/Projet/lv_examples" -I"C:/PerfectTuning/Projet/Drivers/BSP/Components" -I"C:/PerfectTuning/Projet/Drivers/BSP/STM32F769I-Discovery" -I"C:/PerfectTuning/Projet/Utilities/Fonts" -I"C:/PerfectTuning/Projet/Drivers"  -O0 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Src/main.d" -MT"Src/main.o" -o "Src/main.o" "../Src/main.c"
../lv_examples/lv_apps/demo/demo2.c: In function 'demo2_create':
../lv_examples/lv_apps/demo/demo2.c:130:2: warning: implicit declaration of function 'Principale' [-Wimplicit-function-declaration]
  Principale();
  ^~~~~~~~~~
../lv_examples/lv_apps/demo/demo2.c: At top level:
../lv_examples/lv_apps/demo/demo2.c:136:6: warning: conflicting types for 'Principale'
 void Principale ()
      ^~~~~~~~~~
../lv_examples/lv_apps/demo/demo2.c:130:2: note: previous implicit declaration of 'Principale' was here
  Principale();
  ^~~~~~~~~~
../lv_examples/lv_apps/demo/demo2.c: In function 'Parametres':
../lv_examples/lv_apps/demo/demo2.c:227:56: warning: passing argument 3 of 'lv_btn_set_action' from incompatible pointer type [-Wincompatible-pointer-types]
    lv_btn_set_action(btnBack_Param,LV_BTN_ACTION_CLICK,click_Back);
                                                        ^~~~~~~~~~
In file included from c:\perfecttuning\projet\lvgl\lvgl.h:28:0,
                 from ../lv_examples/lv_apps/demo/demo.h:19,
                 from ../lv_examples/lv_apps/demo/demo2.c:12:
c:\perfecttuning\projet\lvgl\lv_objx/lv_btn.h:118:6: note: expected 'lv_action_t {aka enum <anonymous> (*)(struct _lv_obj_t *)}' but argument is of type 'void (*)(lv_obj_t *) {aka void (*)(struct _lv_obj_t *)}'
 void lv_btn_set_action(lv_obj_t * btn, lv_btn_action_t type, lv_action_t action);
      ^~~~~~~~~~~~~~~~~
../Src/main.c:78:1: error: unknown type name 'CAN_InitTypeDef'
 CAN_InitTypeDef test;
 ^~~~~~~~~~~~~~~
../Src/main.c: In function 'main':
../Src/main.c:155:3: warning: implicit declaration of function 'lvgl_init' [-Wimplicit-function-declaration]
   lvgl_init(&hdma_memtomem_dma2_stream0, &hdma2d); //Fonction qui init l'écran et autres instances. Passe les typedef des différents modules pour
   ^~~~~~~~~
../lv_examples/lv_apps/demo/demo2.c:243:58: warning: passing argument 3 of 'lv_btn_set_action' from incompatible pointer type [-Wincompatible-pointer-types]
    lv_btn_set_action(btn_Param_DEBUG,LV_BTN_ACTION_CLICK,click_Parametres_GAUGE);
                                                          ^~~~~~~~~~~~~~~~~~~~~~
In file included from c:\perfecttuning\projet\lvgl\lvgl.h:28:0,
                 from ../lv_examples/lv_apps/demo/demo.h:19,
                 from ../lv_examples/lv_apps/demo/demo2.c:12:
c:\perfecttuning\projet\lvgl\lv_objx/lv_btn.h:118:6: note: expected 'lv_action_t {aka enum <anonymous> (*)(struct _lv_obj_t *)}' but argument is of type 'void (*)(lv_obj_t *) {aka void (*)(struct _lv_obj_t *)}'
 void lv_btn_set_action(lv_obj_t * btn, lv_btn_action_t type, lv_action_t action);
      ^~~~~~~~~~~~~~~~~
../lv_examples/lv_apps/demo/demo2.c:262:60: warning: passing argument 3 of 'lv_btn_set_action' from incompatible pointer type [-Wincompatible-pointer-types]
    lv_btn_set_action(btnBack_Param_LED,LV_BTN_ACTION_CLICK,click_Back);
                                                            ^~~~~~~~~~
../Src/main.c: At top level:
../Src/main.c:93:13: warning: 'MX_DMA2D_Init' declared 'static' but never defined [-Wunused-function]
 static void MX_DMA2D_Init(void);
             ^~~~~~~~~~~~~
In file included from c:\perfecttuning\projet\lvgl\lvgl.h:28:0,
                 from ../lv_examples/lv_apps/demo/demo.h:19,
                 from ../lv_examples/lv_apps/demo/demo2.c:12:
c:\perfecttuning\projet\lvgl\lv_objx/lv_btn.h:118:6: note: expected 'lv_action_t {aka enum <anonymous> (*)(struct _lv_obj_t *)}' but argument is of type 'void (*)(lv_obj_t *) {aka void (*)(struct _lv_obj_t *)}'
 void lv_btn_set_action(lv_obj_t * btn, lv_btn_action_t type, lv_action_t action);
      ^~~~~~~~~~~~~~~~~
../lv_examples/lv_apps/demo/demo2.c:520:60: warning: passing argument 3 of 'lv_btn_set_action' from incompatible pointer type [-Wincompatible-pointer-types]
  lv_btn_set_action(btnBack_Param_DEBUG,LV_BTN_ACTION_CLICK,click_Back);
                                                            ^~~~~~~~~~
../Src/main.c:666:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
 static void MX_GPIO_Init(void)
             ^~~~~~~~~~~~
../Src/main.c:571:13: warning: 'MX_FMC_Init' defined but not used [-Wunused-function]
 static void MX_FMC_Init(void)
             ^~~~~~~~~~~
In file included from c:\perfecttuning\projet\lvgl\lvgl.h:28:0,
                 from ../lv_examples/lv_apps/demo/demo.h:19,
                 from ../lv_examples/lv_apps/demo/demo2.c:12:
c:\perfecttuning\projet\lvgl\lv_objx/lv_btn.h:118:6: note: expected 'lv_action_t {aka enum <anonymous> (*)(struct _lv_obj_t *)}' but argument is of type 'void (*)(lv_obj_t *) {aka void (*)(struct _lv_obj_t *)}'
 void lv_btn_set_action(lv_obj_t * btn, lv_btn_action_t type, lv_action_t action);
      ^~~~~~~~~~~~~~~~~
../Src/main.c:506:13: warning: 'MX_USART3_UART_Init' defined but not used [-Wunused-function]
 static void MX_USART3_UART_Init(void)
             ^~~~~~~~~~~~~~~~~~~
../Src/main.c:471:13: warning: 'MX_SAI1_Init' defined but not used [-Wunused-function]
 static void MX_SAI1_Init(void)
             ^~~~~~~~~~~~
../Src/main.c:422:13: warning: 'MX_LTDC_Init' defined but not used [-Wunused-function]
 static void MX_LTDC_Init(void)
             ^~~~~~~~~~~~
../Src/main.c:322:13: warning: 'MX_DSIHOST_DSI_Init' defined but not used [-Wunused-function]
 static void MX_DSIHOST_DSI_Init(void)
             ^~~~~~~~~~~~~~~~~~~
../lv_examples/lv_apps/demo/demo2.c: In function 'click_Parametres':
../Src/main.c:254:13: warning: 'MX_DFSDM1_Init' defined but not used [-Wunused-function]
 static void MX_DFSDM1_Init(void)
             ^~~~~~~~~~~~~~
../lv_examples/lv_apps/demo/demo2.c:540:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
../lv_examples/lv_apps/demo/demo2.c: In function 'click_Parametres_DEL':
../lv_examples/lv_apps/demo/demo2.c:552:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
../lv_examples/lv_apps/demo/demo2.c: In function 'action_switch_LED':
../lv_examples/lv_apps/demo/demo2.c:698:3: warning: implicit declaration of function 'set_leds' [-Wimplicit-function-declaration]
   set_leds();
   ^~~~~~~~
../lv_examples/lv_apps/demo/demo2.c:705:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
../lv_examples/lv_apps/demo/demo2.c: In function 'actionSlider':
../lv_examples/lv_apps/demo/demo2.c:722:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
../lv_examples/lv_apps/demo/demo2.c: At top level:
../lv_examples/lv_apps/demo/demo2.c:724:6: warning: conflicting types for 'set_leds'
 void set_leds()
      ^~~~~~~~
../lv_examples/lv_apps/demo/demo2.c:698:3: note: previous implicit declaration of 'set_leds' was here
   set_leds();
   ^~~~~~~~
Src/subdir.mk:36: recipe for target 'Src/main.o' failed
make: *** [Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
Finished building: ../lv_examples/lv_apps/demo/demo2.c
 

12:03:16 Build Finished (took 2s.309ms)

